--- a/arch/arm/configs/gproj_defconfig
+++ b/arch/arm/configs/gproj_defconfig
@@ -1263,7 +1263,6 @@ CONFIG_HAVE_BPF_JIT=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
-# CONFIG_BT_SCO is not set
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
@@ -2436,7 +2435,6 @@ CONFIG_MSM_CAMERA_V4L2=y
 # CONFIG_IMX074 is not set
 # CONFIG_OV5647 is not set
 # CONFIG_MT9M114 is not set
-# CONFIG_WEBCAM_OV9726 is not set
 # CONFIG_IMX111 is not set
 # CONFIG_IMX111_ACT is not set
 CONFIG_IMX091=y
@@ -2444,6 +2442,12 @@ CONFIG_IMX091_ACT=y
 CONFIG_IMX119=y
 # CONFIG_CE1702 is not set
 # CONFIG_IMX132 is not set
+# CONFIG_S5K4E5YA is not set
+# CONFIG_S5K4E5YA_ACT is not set
+# CONFIG_S5K4E5YA_EEPROM is not set
+# CONFIG_OV5693 is not set
+# CONFIG_OV5693_ACT is not set
+# CONFIG_OV5693_EEPROM is not set
 CONFIG_MSM_CAMERA_FLASH_LM3559=y
 # CONFIG_IMX074_ACT is not set
 # CONFIG_S5K4E1 is not set
@@ -2452,14 +2456,14 @@ CONFIG_MSM_CAMERA_FLASH_LM3559=y
 # CONFIG_IMX072 is not set
 # CONFIG_OV2720 is not set
 # CONFIG_OV8825 is not set
-# CONFIG_OV8830 is not set
+# CONFIG_IMX135 is not set
+# CONFIG_OV9724 is not set
 CONFIG_MSM_CAMERA_FLASH=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_ACTUATOR=y
 CONFIG_MSM_EEPROM=y
 # CONFIG_IMX074_EEPROM is not set
 CONFIG_IMX091_EEPROM=y
-# CONFIG_OV8830_EEPROM is not set
 CONFIG_MSM_GEMINI=y
 # CONFIG_MSM_MERCURY is not set
 # CONFIG_MSM_CAM_IRQ_ROUTER is not set
