--- a/arch/arm/configs/geeb_defconfig
+++ b/arch/arm/configs/geeb_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.108-jolla-kernel_Gen3-v3.2 Kernel Configuration
+# Linux/arm 3.4.108-jolla-kernel_Gen3-v3.3 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -3127,6 +3127,8 @@ CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC2_SUPPORT is not set
 CONFIG_MMC_MSM_SDC3_SUPPORT=y
 # CONFIG_MMC_MSM_SDC3_POLLING is not set
+# CONFIG_MMC_MSM_SDC3_8_BIT_SUPPORT is not set
+# CONFIG_MMC_MSM_SDC3_WP_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC4_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC5_SUPPORT is not set
 CONFIG_MMC_MSM_SPS_SUPPORT=y
