--- a/arch/arm/configs/gproj_defconfig
+++ b/arch/arm/configs/gproj_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.108-jolla-kernel_Gen3-v3.5 Kernel Configuration
+# Linux/arm 3.4.108-jolla-kernel_Gen3-v3.6 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -1766,6 +1766,7 @@ CONFIG_TOUCH_REG_MAP_TM2000=y
 # CONFIG_TOUCHSCREEN_ATMEL_MAXT224E is not set
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_SCROFF_VOLCTR=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
