--- a/arch/arm/configs/gproj_defconfig
+++ b/arch/arm/configs/gproj_defconfig
@@ -531,7 +531,7 @@ CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1350000
 CONFIG_MSM_CPU_FREQ_MIN=162000
 # CONFIG_INTELLI_PLUG is not set
-CONFIG_MSM_SLEEPER=y
+# CONFIG_MSM_SLEEPER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
