jolla-kernel_Gen3-v5.1

--- a/arch/arm/configs/geeb_defconfig
+++ b/arch/arm/configs/geeb_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.110-jolla-kernel_Gen3-v5.0 Kernel Configuration
+# Linux/arm 3.4.110-jolla-kernel_Gen3-v5.1 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -177,6 +177,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -530,7 +531,7 @@ CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1350000
 CONFIG_MSM_CPU_FREQ_MIN=162000
 # CONFIG_INTELLI_PLUG is not set
-CONFIG_MSM_SLEEPER=y
+# CONFIG_MSM_SLEEPER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
