gproj_defconfig: Enable UID_CPUTIME

--- a/arch/arm/configs/gproj_defconfig
+++ b/arch/arm/configs/gproj_defconfig
@@ -1420,6 +1420,7 @@ CONFIG_QSEECOM=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 # CONFIG_BU52031NVX is not set
 # CONFIG_LGE_FTT_CHARGER is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
